--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ model.bin
 model_mpi_omp.bin
 model_omp.bin
 model_omp_optimized.bin
+model_mpi_openmp_optimized.bin
+mpi_openmp_optimized
 omp
 mpi
 sequential
